@@ -12,9 +12,15 @@ class LinkBlock(blocks.StructBlock):
         context['classname'] = 'important' if value['title'] == 'Torchbox' else 'normal'
         return context
 
+    def get_form_context(self, value, prefix='', errors=None):
+        context = super(LinkBlock, self).get_form_context(value, prefix=prefix, errors=errors)
+        context['extra_var'] = "Hello from get_form_context!"
+        return context
+
     class Meta:
         icon = "site"
         template = 'tests/blocks/link_block.html'
+        form_template = 'tests/block_forms/link_block.html'
 
 
 class SectionBlock(blocks.StructBlock):
